@@ -1,11 +1,6 @@
-; @(#)$Ident: dist.ini 2013-11-30 15:26 pjf ;
+; @(#)$Ident: dist.ini 2013-12-03 16:32 pjf ;
 
-name              = File-DataClass
-abstract          = Structured data file IO with OO paradigm
-author            = Peter Flanigan <pjfl@cpan.org>
-copyright_holder  = Peter Flanigan
-license           = Perl_5
-main_module       = lib/File/DataClass.pm
+name = File-DataClass
 
 [Prereqs]
 perl              = 5.010001
@@ -61,15 +56,12 @@ bugtracker.mailto = bug-File-DataClass@rt.cpan.org
 ;repository.web   = http://github.com/pjfl/p5-file-dataclass
 ;repository.type  = git
 
-[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
-filename          = README.md
-location          = root
-type              = markdown
-
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
 [GatherDir]
+[AbstractFromPOD]
+[LicenseFromModule]
 [VersionFromModule]
 [ModuleBuild::Custom]
 [License]
